HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallStaticJudgementsAndArgumentTyping/Expected.uv
//! Expected diagnostic metadata for the CallStaticJudgementsAndArgumentTyping rejected-source specimen.

expectedDiagnostic("E-SEM-2532", "def.16.CallStaticJudgementsAndArgumentTyping")
